@@ -192,6 +192,7 @@ namespace lua {
         extern LIBZHL_API const char* EntityConfigBabyMT;
         extern LIBZHL_API const char* EntitySaveStateMT;
         extern LIBZHL_API const char* EntitySlotMT;
+        extern LIBZHL_API const char* FXLayersMT;
         extern LIBZHL_API const char* FXParamsMT;
         extern LIBZHL_API const char* GridDecorationMT;
         extern LIBZHL_API const char* GridFireMT;
